# rust-dojo

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  shell.nix
.devcontainer/: devcontainer.json
crates/exercism/: Cargo.toml
crates/exercism/src/: bottles.rs  clocks.rs  gigasecond.rs  lib.rs  multithread.rs  reverse.rs
crates/exercism/tests/: test_bottles.rs  test_hello_world.rs  test_space_age.rs
crates/exercism/tests/common/: mod.rs
crates/free_practice/: Cargo.toml
crates/zero_to_prod/: Cargo.toml
crates/zero_to_prod/src/: lib.rs  main.rs
crates/zero_to_prod/tests/: health_check.rs
src/: lib.rs  main.rs
tests/: health_check.rs
