[package]
name = "rust-dojo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/zero_to_prod.rs"


[[bin]]
path = "src/main.rs"
name = "rust_dojo"


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12.4"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
